@startuml
class ChangeWallpaperCommand {
    + ChangeWallpaperCommand(baseImage:BaseImage, style:Wallpaper.Style)
    + <<async>> ExecuteAsync() : Task
}
class Wallpaper <<static>> {
    + {static} Set(path:string, style:Style) : bool
}
enum Style {
    Fill,
    Fit,
    Span,
    Stretch,
    Tile,
    Center,
}
ITaskCommand <|-- ChangeWallpaperCommand
ChangeWallpaperCommand --> "baseImage" BaseImage
Wallpaper +-- Style
@enduml
